# abcdoc

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  deploy.yml
demo/: colors.css  index.htm  w3.css
docs/: Makefile  advanced.rst  api_reference.rst  change_log.rst  changelog.rst  conf.py  defs.inc  genindex.rst  glossary.rst  index.rst  installation.rst  reference.rst  reference_guide.rst  usage.rst  user_guide.rst
doit_doc_template/: __init__.py  builders.py  writers.py
doit_doc_template/core/: __init__.py  action.py  component.py  context.py  dispatcher.py  errors.py  info.py  keywords.py  layout.py  library.py  meta.py  static.py  template.py  utils.py  validators.py  yaml.py
doit_doc_template/helpers/: __init__.py  dispatcher.py  errors.py  templates.py  utils.py
doit_doc_template/templates/: __init__.py
doit_doc_template/templates/base/: __init__.py  elements.html  nodes.yml  template.yml
doit_doc_template/templates/base/components/: main.yml
doit_doc_template/templates/base/context/: main.yml
doit_doc_template/templates/base/dispatcher/: main.yml
doit_doc_template/templates/default/: __init__.py  main.yml  template.yml
doit_doc_template/writers/: writers.py
src/sphinx_abcdoc_theme/: __init__.py  __init__.pyi  theme.py  theme.toml  version.py
template/static/css/: doitdoc.css
template/static/js/: doitdoc.js
tests/unit/: __init__.py  test_theme.py  test_version.py
tests/visual/: basic.html
utils/: mkutils.mk
(+13 files in other folders)
