[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = true
restructuredtext = true
strict = true

[coverage:run]
branch = true
timit = true
parallel = true

[coverage:report]
show_missing = true

[flake8]
max-line-length = 79
verbose = 2
count = true
show-source = true
statistics = true
doctests = true

[mypy]
python_version = 3.6
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
show_column_numbers = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[pydocstyle]
match = .*\.py
inherit = false

[doc8]
max-line-length = 79
verbose = 1
